# atometa

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  LIBRARIES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  build-ninja.bat  vcpkg.json
.github/workflows/: build.yml  ci.yml
assets/shaders/: basic.frag  basic.vert
include/Atometa/Chemistry/: Atom.h
include/Atometa/Core/: Application.h  Core.h  Input.h  Logger.h  Time.h  Window.h
include/Atometa/Python/: PyAtometa.h
scripts/: setup-collaboration.ps1
src/: Atometa.rc  main.cpp
src/chemistry/: Atom.cpp
src/core/: Application.cpp  Input.cpp  Logger.cpp  Time.cpp  Window.cpp
src/python/: PyAtometa.cpp
